# pcUse

./: .env.example  .gitignore  COMMIT_INSTRUCTIONS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build-installers.yml  build-windows.yml  release.yml
agent-runtime/: main.py  pyproject.toml  requirements.txt
agent-runtime/agent_runtime/: server.py
agent-runtime/agent_runtime/llm/: compatible_client.py  openai_client.py  prompt_builder.py  tool_schema.py
agent-runtime/config/: settings.yaml  tool_policies.yaml
agent-runtime/tests/: test_permission_guard.py  test_planner.py
apps/app-ui/: index.html  package.json  vite.config.ts
apps/desktop-host/: package.json
apps/desktop-host/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-host/src-tauri/capabilities/: default.json
apps/desktop-host/src-tauri/icons/: icon.icns
apps/desktop-host/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop-host/src-tauri/src/commands/: app.rs  mod.rs  settings.rs  system.rs
docs/: architecture.md  component-data-flow.md  mvp-roadmap.md  security-policy.md  tool-schema.md
scripts/: build.ps1  dev.ps1  migrate.ps1  package.ps1  setup-runtime.ps1
security/audit/: audit_logger.py
security/credential/: dpapi_store.rs  key_manager.py
security/policy/: default_policy.json  high_risk_actions.json
shared/: package.json  tsconfig.json
shared/constants/: toolNames.ts
shared/protocol/: events.ts  result.ts  task.ts
shared/types/: index.ts
tests/integration/: README.md
(+57 files in other folders)
